--- a/netmon-playbook.yml
+++ b/netmon-playbook.yml
@@ -95,5 +95,6 @@
       interactive: yes
       tty: yes
       detach: yes
+      restart_policy: always
       volumes:
         - /netmon-logs:/var/log/netmon-logs
