added lsb-release checking for LinuxMint and Ubuntu

--- a/netmon-playbook.yml
+++ b/netmon-playbook.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: all
+  become: yes
   tasks:
 
   - name: query linux kernel release
@@ -7,11 +8,9 @@
     register: kernel_release 
     
   - name: Add docker Key
-    become: yes
     command: bash -c 'echo deb https://apt.dockerproject.org/repo ubuntu-trusty main > /etc/apt/sources.list.d/docker.list' && apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:11371 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D creates=/etc/apt/sources.list.d/docker.list
   
   - name: Remove lxc-docker Package
-    become: yes
     apt:
       name: lxc-docker
       state: absent
@@ -20,8 +19,7 @@
     register: result
     until: result | success
     
-  - name: Install Shit
-    become: yes
+  - name: Install Docker
     apt:
       name: "{{ item }}"
       state: present
@@ -36,27 +34,44 @@
     delay: 10
     register: result
     until: result | success
+    when: ansible_lsb.id == 'LinuxMint'
+
+  - name: Install Docker
+    apt:
+      name: "{{ item }}"
+      state: present
+      update_cache: yes
+      force: yes
+    with_items:
+#      - linux-image-extra-{{ kernel_release.stdout }}
+#      - linux-headers-generic
+      - docker
+      - python-pip
+    retries: 5
+    delay: 10
+    register: result
+    until: result | success
+    when: ansible_lsb.id == 'Ubuntu'
+    
+  - debug:
+        msg: "ansible_lsb.id is {{ ansible_lsb.id }}"
     
   - name: install docker-py
-    become: yes
     pip:
       name: docker-py
     
   - name: docker group
-    become: yes
     group:
       name: docker
       state: present
       system: yes
   
   - name: enable docker service
-    become: yes
     service:
       name: docker
       enabled: yes
   
   - name: start docker service
-    become: yes
     service:
       name: docker
       state: started
@@ -66,28 +81,24 @@
     register: current_username
          
   - name: add "{{ current_username.stdout }}" to docker group
-    become: yes
     user:
       name: "{{ current_username.stdout }}"
       groups: docker
       append: yes
    
   - name: update docker image
-    become: yes
     docker_image:
       name: smankoo/netmon
       state: present
       force: yes
 
   - name: remove docker container
-    become: yes
     docker_container:
       name: netmon
       image: smankoo/netmon
       state: absent
   
   - name: start docker container
-    become: yes
     docker_container:
       name: netmon
       image: smankoo/netmon
