--- a/netmon-playbook.yml
+++ b/netmon-playbook.yml
@@ -27,7 +27,7 @@
       force: yes
     with_items:
       - linux-image-extra-{{ kernel_release.stdout }}
-#      - linux-headers-generic
+      - linux-headers-generic
       - docker-engine
       - python-pip
     retries: 5
