--- a/netmon-playbook.yml
+++ b/netmon-playbook.yml
@@ -7,8 +7,9 @@
     shell: uname -r | xargs
     register: kernel_release 
     
-  - name: Add docker Key
+  - name: Add docker Key 17
     command: bash -c 'echo deb https://apt.dockerproject.org/repo ubuntu-trusty main > /etc/apt/sources.list.d/docker.list' && apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:11371 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D creates=/etc/apt/sources.list.d/docker.list
+    when: ansible_lsb.id == 'LinuxMint' and ansible_lsb.major_release == '17'
   
   - name: Remove lxc-docker Package
     apt:
@@ -19,12 +20,13 @@
     register: result
     until: result | success
     
-  - name: Install Docker
+  - name: Install Docker on Mint 17
     apt:
       name: "{{ item }}"
       state: present
       update_cache: yes
       force: yes
+      allow_unauthenticated: yes
     with_items:
       - linux-image-extra-{{ kernel_release.stdout }}
       - linux-headers-generic
@@ -34,31 +36,53 @@
     delay: 10
     register: result
     until: result | success
-    when: ansible_lsb.id == 'LinuxMint'
+    when: ansible_lsb.id == 'LinuxMint' and ansible_lsb.major_release == '17'
 
-  - name: Install Docker
+  - name: Install Docker-Prereqs on Mint 18
     apt:
       name: "{{ item }}"
       state: present
       update_cache: yes
       force: yes
+      allow_unauthenticated: yes
     with_items:
-      - linux-image-extra-{{ kernel_release.stdout }}
-      - linux-headers-generic
-      - docker
-      - python-pip
+      - linux-image-generic
+      - linux-image-extra-virtual
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - software-properties-common
     retries: 5
     delay: 10
     register: result
     until: result | success
-    when: ansible_lsb.id == 'Ubuntu'
+    when: ansible_lsb.id == 'LinuxMint' and ansible_lsb.major_release == '18'
+
+  - name: Add docker Key 18
+    command: bash -c 'sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable" && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -'
+    when: ansible_lsb.id == 'LinuxMint' and ansible_lsb.major_release == '18'
     
-  - debug:
-        msg: "ansible_lsb.id is {{ ansible_lsb.id }}"
-    
-  - name: install docker-py
+  - name: Install Docker on Mint 18
+    apt:
+      name: "{{ item }}"
+      state: present
+      update_cache: yes
+      force: yes
+      allow_unauthenticated: yes
+    with_items:
+      - docker-ce
+    retries: 5
+    delay: 10
+    register: result
+    until: result | success
+    when: ansible_lsb.id == 'LinuxMint' and ansible_lsb.major_release == '18'
+
+  - name: time for some docker py
     pip:
       name: docker-py
+      
+  - debug:
+        msg: "ansible_lsb.id is {{ ansible_lsb.id }}"
     
   - name: docker group
     group:
@@ -75,6 +99,8 @@
     service:
       name: docker
       state: started
+
+
 
   - name: get the username running the deploy
     shell: whoami | xargs
